--- a/gradle.properties
+++ b/gradle.properties
@@ -39,7 +39,7 @@ tracing = true
 #tracePinnedThreads = true
 
 
-# https = false
+https = false
 #test = true
 
 sonarToken = sqa_c5b304695772edad15ad83c7cd2a2d8eafd67fc3
